FirstUniqueCharacterInString and linked list